--- a/Fitness Site/Css/navigation.css
+++ b/Fitness Site/Css/navigation.css
@@ -1,7 +1,9 @@
 @charset "UTF-8";
 /* CSS Document */
 
- .header a.active {
+ .header a.Contact {
   background-color: dodgerblue;
   color: white;
 }
+
+
